@@ -1,5 +1,8 @@
 1.14.1
 ------
+(RB=262459)
+Adding a temporary fix to ignore the unused folders in the parseq-tracevis artifact in maven central.
+
 (RB=260228)
 Adding debug request handler support to Rest.Li. Introducing a new debug request handler: Parseq Trace Debug Request Handler.
 
